 * Fix: Server errors during search indexing on creating / updating / deleting a model are now logged, rather than causing the overall operation to fail (Karl Hobley)
 * Fix: Objects are now correctly removed from search indexes on deletion (Karl Hobley)


1.4.5 (19.05.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Paste / drag operations done entirely with the mouse are now correctly picked up as edits within the rich text editor (Matt Fozard)
 * Fix: Logic for cancelling the "unsaved changes" check on form submission has been fixed to work cross-browser (Stephen Rice)
 * Fix: The "unsaved changes" confirmation was erroneously shown on IE / Firefox when previewing a page with validation errors (Matt Westcott)
 * Fix: The up / down / delete controls on the "Promoted search results" form no longer trigger a form submission (Matt Westcott)
 * Fix: Opening preview window no longer performs user-agent sniffing, and now works correctly on IE11 (Matt Westcott)
 * Fix: Tree paths are now correctly assigned when previewing a newly-created page underneath a parent with deleted children (Matt Westcott)
 * Fix: Added BASE_URL setting back to project template
 * Fix: Clearing the search box in the page chooser now returns the user to the browse view (Matt Westcott)
 * Fix: The above fix also fixed an issue where Internet Explorer got stuck in the search view upon opening the page chooser (Matt Westcott)


1.4.4 (10.05.2016)
~~~~~~~~~~~~~~~~~~

 * New translation for Slovenian (Mitja Pagon)
 * Fix: The `wagtailuserbar` template tag now gracefully handles situations where the `request` object is not in the template context (Matt Westcott)
 * Fix: Meta classes on StreamField blocks now handle multiple inheritance correctly (Tim Heap)
 * Fix: Now user can upload images / documents only into permitted collection from choosers
 * Fix: Keyboard shortcuts for save / preview on the page editor no longer incorrectly trigger the "unsaved changes" message (Jack Paine, Matt Westcott)